[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "study01"
path = "src/study01.rs"

[[bin]]
name = "study02"
path = "src/study02.rs"

[[bin]]
name = "study03"
path = "src/study03.rs"


[package]
name = "scheme-rs"
version = "0.1.0"
authors = ["osiutino <osiutino@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4.3"