[package]
name = "scheme_rs"
version = "0.1.0"
authors = ["osiutino <osiutino@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4.3"

[[bin]]
name = "cli"
path = "src/cli.rs"

[[bin]]
name = "scheme"
path = "src/main.rs"


[[bench]]
name = "bench"
path = "src/bench.rs"

[features]
unstable = []
